--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -85,7 +85,7 @@
                                 data-target="#mentorship-posts-create-modal">Create Mentorship Post
                         </button>
                         <button class="btn nav-create-button dropdown-item bg-dark" id="dash-nav-job-posts-create" data-toggle="modal"
-                                data-target="#job-postings-create-modal">Create Job Post
+                                data-target="#job-postings-create-modal">Create Job Posting
                         </button>
                         <button class="btn nav-create-button dropdown-item bg-dark" id="dash-nav-whiteboard-questions-create" data-toggle="modal"
                                 data-target="#whiteboard-questions-create-modal">Create Whiteboard Question
