--- a/src/main/resources/templates/users/dashboard.html
+++ b/src/main/resources/templates/users/dashboard.html
@@ -4,6 +4,7 @@
 <head>
     <th:block th:include="fragments/header.html :: header(title = 'Dashboard')"/>
     <meta class="talkJSAppId" th:content="${talkJSAppId}"/>
+    <meta class="filestackKey" th:content="${filestackKey}  "/>
 </head>
 <body class="back">
 <nav th:replace="fragments/navbar.html :: navbar"></nav>
