--- a/src/main/resources/templates/admin/dashboard.html
+++ b/src/main/resources/templates/admin/dashboard.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <nav th:replace="fragments/navbar.html :: navbar"></nav>
+<div th:replace="fragments/create-modals.html :: create-modals"></div>
 <div class="row">
     <h2 class="col-12 mx-auto">Metrics:</h2>
     <div class="col-2">
