--- a/src/main/resources/templates/job-postings/show.html
+++ b/src/main/resources/templates/job-postings/show.html
@@ -3,9 +3,11 @@
 <head>
     <th:block th:include="fragments/header.html :: header(title = 'Job Postings')"/>
     <meta class="talkJSAppId" th:content="${talkJSAppId}"/>
+    <meta class="filestackKey" th:content="${filestackKey}"/>
 </head>
 <body class="back">
 <nav th:replace="fragments/navbar.html :: navbar"></nav>
+<div th:replace="fragments/create-modals.html :: create-modals"></div>
 
 <div class="container profile-container">
     <!--    PROFILE CARD    -->
