--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -182,18 +182,15 @@ header {
     font-size: 100px;
 }
 
-.nav-create-button, .logout-button {
+.nav-create-button, .logout-button, .drop {
     color: rgba(255,255,255,.5) !important;
 }
 
-.nav-link:hover, .nav-create-button:hover, .logout-button:hover{
+.nav-link:hover, .nav-create-button:hover, .logout-button:hover, .drop:hover {
     color: #0f6674 !important;
     text-decoration: none !important;
 }
-/*.logout-button:hover{*/
-/*    text-decoration: none;*/
-/*    color: #0c5460 !important;*/
-/*}*/
+
 @media only screen and (max-width: 600px) {
     .parallax2{
         display: none;
