--- a/src/main/resources/templates/chat/inbox.html
+++ b/src/main/resources/templates/chat/inbox.html
@@ -3,8 +3,11 @@
 <head>
     <th:block th:include="fragments/header.html :: header(title = 'Test Talk JS')"/>
     <meta class="talkJSAppId" th:content="${talkJSAppId}"/>
+    <meta class="filestackKey" th:content="${filestackKey}"/>
 </head>
 <body>
+<nav th:replace="fragments/navbar.html :: navbar"></nav>
+<div th:replace="fragments/create-modals.html :: create-modals"></div>
 <div class="new-chat-div" id="new-chat-div"></div>
 <button class="new-chat-button" id="new-chat-button">New Chat</button>
 <div id="talkjs-container" style="width: 90%; margin: 30px; height: 500px"><i>Loading Chat...</i></div>
