--- a/src/main/resources/templates/fragments/create-modals.html
+++ b/src/main/resources/templates/fragments/create-modals.html
@@ -77,76 +77,77 @@
             </div>
         </div>
     </div>
-<!--    &lt;!&ndash; Job Create Modal &ndash;&gt;-->
-<!--    <div th:if="${#httpServletRequest.requestURI.contains('job-postings') || #httpServletRequest.requestURI.contains('users/dashboard')}">-->
-<!--        <div class="modal fade" id="job-postings-create-modal" tabindex="-1" role="dialog"-->
-<!--             aria-labelledby="job-postings-create-modal-title"-->
-<!--             aria-hidden="true">-->
-<!--            <div class="modal-dialog modal-dialog-centered modal-md" role="document">-->
-<!--                <div class="modal-content">-->
-<!--                    <div class="modal-header">-->
-<!--                        <h5 class="modal-title" id="job-postings-create-modal-title">Create Job Posting</h5>-->
-<!--                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">-->
-<!--                            <span aria-hidden="true">&times;</span>-->
-<!--                        </button>-->
-<!--                    </div>-->
-<!--                    <div class="modal-body row" id="job-postings-create-modal-body">-->
-<!--                        <form th:action="@{/job-postings/create}" th:method="post" th:object="${post}">-->
-<!--                            Title:-->
-<!--                            <input th:field="*{title}" />-->
-<!--                            <br />-->
-<!--                            Employer:-->
-<!--                            <input th:field="*{employer}" />-->
-<!--                            <br />-->
-<!--                            Body:-->
-<!--                            <input th:field="*{body}" />-->
-<!--                            <br />-->
-<!--                            <input type="hidden" class="" id="job-postings-type" name="postTypeId" value="3">-->
-<!--                            <input type="submit" />-->
-<!--                        </form>-->
-<!--                    </div>-->
-<!--                    <div class="modal-footer">-->
-<!--                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--    &lt;!&ndash; Whiteboard Create Modal &ndash;&gt;-->
-<!--    <div th:if="${#httpServletRequest.requestURI.contains('whiteboard-questions') || #httpServletRequest.requestURI.contains('users/dashboard')}">-->
-<!--        <div class="modal fade" id="whiteboard-questions-create-modal" tabindex="-1" role="dialog"-->
-<!--             aria-labelledby="job-postings-create-modal-title"-->
-<!--             aria-hidden="true">-->
-<!--            <div class="modal-dialog modal-dialog-centered modal-md" role="document">-->
-<!--                <div class="modal-content">-->
-<!--                    <div class="modal-header">-->
-<!--                        <h5 class="modal-title" id="whiteboard-questions-create-modal-title">Create Whiteboard Question</h5>-->
-<!--                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">-->
-<!--                            <span aria-hidden="true">&times;</span>-->
-<!--                        </button>-->
-<!--                    </div>-->
-<!--                    <div class="modal-body row" id="whiteboard-questions-create-modal-body">-->
-<!--                        <form th:action="@{/whiteboard-questions/create}" th:method="post" th:object="${post}">-->
-<!--                            Title:-->
-<!--                            <input th:field="*{title}" />-->
-<!--                            <br />-->
-<!--                            Body:-->
-<!--                            <input th:field="*{body}" />-->
-<!--                            <br />-->
-<!--                            Answer:-->
-<!--                            <input th:field="*{answer}" />-->
-<!--                            <br />-->
-<!--                            <input type="hidden" class="" id="whitboard-questions-type" name="postTypeId" value="4">-->
-<!--                            <input type="submit" />-->
-<!--                        </form>-->
-<!--                    </div>-->
-<!--                    <div class="modal-footer">-->
-<!--                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
+    <!-- Job Create Modal -->
+    <div th:if="${#httpServletRequest.requestURI.contains('job-postings') || #httpServletRequest.requestURI.contains('users/dashboard')}">
+        <div class="modal fade" id="job-postings-create-modal" tabindex="-1" role="dialog"
+             aria-labelledby="job-postings-create-modal-title"
+             aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered modal-md" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="job-postings-create-modal-title">Create Job Posting</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body row" id="job-postings-create-modal-body">
+                        <div>
+                            Title:
+                            <input name="interview-questions-title" id="job-postings-title"/>
+                            <br/>
+                            Employer:
+                            <input name="interview-questions-employer" id="job-postings-employer"/>
+                            <br/>
+                            Body:
+                            <input name="interview-questions-body" id="job-postings-body"/>
+                            <br/>
+                            <button class="btn submit-button" id="job-postings-submit-button" data-dismiss="modal">Submit</button>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Whiteboard Create Modal -->
+    <div th:if="${#httpServletRequest.requestURI.contains('whiteboard-questions') || #httpServletRequest.requestURI.contains('users/dashboard')}">
+        <div class="modal fade" id="whiteboard-questions-create-modal" tabindex="-1" role="dialog"
+             aria-labelledby="job-postings-create-modal-title"
+             aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered modal-md" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="whiteboard-questions-create-modal-title">Create Whiteboard Question</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body row" id="whiteboard-questions-create-modal-body">
+                        <div>
+                            Title:
+                            <input name="interview-questions-title" id="whiteboard-questions-title"/>
+                            <br/>
+                            Employer:
+                            <input name="interview-questions-employer" id="whiteboard-questions-employer"/>
+                            <br/>
+                            Body:
+                            <input name="interview-questions-body" id="whiteboard-questions-body"/>
+                            <br/>
+                            Answer:
+                            <input name="interview-questions-answer" id="whiteboard-questions-answer"/>
+                            <br/>
+                            <button class="btn submit-button" id="whiteboard-questions-submit-button" data-dismiss="modal">Submit</button>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 </body>
 </html>
