--- a/src/main/resources/templates/interview-questions/show.html
+++ b/src/main/resources/templates/interview-questions/show.html
@@ -4,9 +4,11 @@
 <head>
     <th:block th:include="fragments/header.html :: header(title = 'Interview Questions')"/>
     <meta class="talkJSAppId" th:content="${talkJSAppId}"/>
+    <meta class="filestackKey" th:content="${filestackKey}  "/>
 </head>
 <body class="back">
 <nav th:replace="fragments/navbar.html :: navbar"></nav>
+<div th:replace="fragments/create-modals.html :: create-modals"></div>
 
 <div class="container profile-container">
 
