--- a/src/main/resources/templates/questions/show.html
+++ b/src/main/resources/templates/questions/show.html
@@ -3,9 +3,11 @@
 <head>
     <th:block th:include="fragments/header.html :: header(title = 'Interview Question Practice')"/>
     <meta class="talkJSAppId" th:content="${talkJSAppId}"/>
+    <meta class="filestackKey" th:content="${filestackKey}"/>
 </head>
 <body>
 <nav th:replace="fragments/navbar.html :: navbar"></nav>
+<div th:replace="fragments/create-modals.html :: create-modals"></div>
 <button class="start-button" id="start-button">Start Question Round</button>
 <div id="fill-this"></div>
 
