--- a/src/main/resources/templates/whiteboard-questions/show.html
+++ b/src/main/resources/templates/whiteboard-questions/show.html
@@ -3,9 +3,11 @@
 <head>
     <th:block th:include="fragments/header.html :: header(title = 'Whiteboard Questions')"/>
     <meta class="talkJSAppId" th:content="${talkJSAppId}"/>
+    <meta class="filestackKey" th:content="${filestackKey}"/>
 </head>
 <body>
 <nav th:replace="fragments/navbar.html :: navbar"></nav>
+<div th:replace="fragments/create-modals.html :: create-modals"></div>
 <div th:each="post : ${postList}">
     <h1 th:text = "${post.title}"></h1>
     <p th:text = "${post.body}"></p>
