--- a/src/main/resources/templates/whiteboard/whiteboard.html
+++ b/src/main/resources/templates/whiteboard/whiteboard.html
@@ -5,6 +5,7 @@
     <th:block th:include="fragments/header.html :: header(title = 'Whiteboard')"/>
     <meta class="firebaseKey" th:content="${firebaseKey}"/>
     <meta class="talkJSAppId" th:content="${talkJSAppId}"/>
+    <meta class="filestackKey" th:content="${filestackKey}"/>
     <title>Whiteboard</title>
     <!-- Firebase -->
     <script src="https://www.gstatic.com/firebasejs/5.5.4/firebase.js"></script>
@@ -27,6 +28,8 @@
     </style>
 </head>
 <body onload="init()">
+<nav th:replace="fragments/navbar.html :: navbar"></nav>
+<div th:replace="fragments/create-modals.html :: create-modals"></div>
 <h3>CodeOn Whiteboard Environment. Click "Get Question" to begin.</h3>
 <div id="button-div">
     <button class="get-question-button" id="get-question-button">Get Question</button>
