--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -122,7 +122,7 @@
                     </form>
                 </li>
             </ul>
-            <ul th:if="${#httpServletRequest.requestURI.contains('whiteboard-questions')}" class="navbar-nav ml-auto">
+            <ul th:if="${#httpServletRequest.requestURI.contains('whiteboard')}" class="navbar-nav ml-auto">
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{|/users/dashboard|}">Dashboard</a>
                 </li>
