--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -16,7 +16,8 @@
                     <a class="nav-link" th:href="@{|/users/dashboard|}">Dashboard</a>
                 </li>
                 <li class="nav-item">
-                    <button class="btn nav-create-button" id="nav-interview-questions-create">Create Question
+                    <button class="btn nav-create-button" id="nav-interview-questions-create" data-toggle="modal"
+                            data-target="#interview-questions-create-modal">Create Question
                     </button>
                 </li>
                 <li class="nav-item">
@@ -90,7 +91,9 @@
                     <a class="nav-link" th:href="@{|/users/dashboard|}">Dashboard</a>
                 </li>
                 <li class="nav-item">
-                    <button class="btn nav-create-button" id="nav-job-postings-create">Create Posting</button>
+                    <button class="btn nav-create-button" id="nav-job-postings-create" data-toggle="modal"
+                            data-target="#job-postings-create-modal">Create Posting
+                    </button>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="interview-dropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -127,7 +130,9 @@
                     <a class="nav-link" th:href="@{|/users/dashboard|}">Dashboard</a>
                 </li>
                 <li class="nav-item">
-                    <button class="btn nav-create-button" id="nav-whiteboard-questions-create">Create Question</button>
+                    <button class="btn nav-create-button" id="nav-whiteboard-questions-create" data-toggle="modal"
+                            data-target="#whiteboard-questions-create-modal">Create Question
+                    </button>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="interview-dropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
