--- a/src/main/resources/templates/users/dashboard.html
+++ b/src/main/resources/templates/users/dashboard.html
@@ -174,67 +174,53 @@
                 </button>
             </div>
         </div>
-</div>
-<div class="col-9">
-    <div class="card mb-2">
-        <div class="card-body">
-            <div th:each="post : ${interviewQuestionsList}">
-            <div class="row">
-                <div class="col-1">
-                        <i class="upvote-button fas fa-arrow-up btn btn-link"  th:id="'upvote-' + ${post.id}"></i>
-                        <p class="mb-0 ml-3">  <span th:text = "${post.getRatingTotal()}"></span></p>
-                        <i class="downvote-button fas fa-arrow-down btn btn-link" th:id="'downvote-' + ${post.id}"></i>
-                </div>
-                <div class="col-11">
-                                <div th:id="'post-' + ${post.id}">
-                                    <p class="m-r mb-0 userprint">Posted on: <span class="userinfo" th:text = "${post.dateTime}"></span> by <span class="userinfo" th:text="${post.user.username}"></span></p>
-                                    <h1 th:text = "${post.title}"></h1>
-                                    <p th:text = "${post.body}"></p>
-                                    <p class = "mb-0" th:text = "${post.answer}"></p>
-                                    <hr class="m-0">
-                                    <!--                                                        <p class="m-r mb-0">Asked by: <span th:text="${post.user.username}"></span> On: <span th:text = "${post.dateTime}"></span>  </p>-->
-                                    <div  th:if="${post.imageURLList.size() > 0 && post.imageURLList[0].url.length() > 8}" >
-                                        <img th:src="${post.imageURLList[0].url}" alt="post-image">
+    </div>
+    <div class="col-9">
+        <div class="card mb-2">
+            <div class="card-body">
+                <div th:each="post : ${interviewQuestionsList}">
+                    <div class="row">
+                        <div class="col-1">
+                            <i class="upvote-button fas fa-arrow-up btn btn-link"  th:id="'upvote-' + ${post.id}"></i>
+                            <p class="mb-0 ml-3">  <span th:text = "${post.getRatingTotal()}"></span></p>
+                            <i class="downvote-button fas fa-arrow-down btn btn-link" th:id="'downvote-' + ${post.id}"></i>
+                        </div>
+                        <div class="col-11">
+                            <div th:id="'post-' + ${post.id}">
+                                <p class="m-r mb-0 userprint">Posted on: <span class="userinfo" th:text = "${post.dateTime}"></span> by <span class="userinfo" th:text="${post.user.username}"></span></p>
+                                <h1 th:text = "${post.body}"></h1>
+                                <p th:text = "${post.title}"></p>
+                                <p class = "mb-0" th:text = "${post.answer}"></p>
+                                <hr class="m-0">
+                                <!--                                                        <p class="m-r mb-0">Asked by: <span th:text="${post.user.username}"></span> On: <span th:text = "${post.dateTime}"></span>  </p>-->
+                                <div  th:if="${post.imageURLList.size() > 0 && post.imageURLList[0].url.length() > 8}" >
+                                    <img th:src="${post.imageURLList[0].url}" alt="post-image">
+                                </div>
+                            </div>
+
+                            <div th:each="comment : ${post.commentList}">
+                                <div class="row">
+                                    <div class="col-1">
+                                        <i class="upvote-comment-button fas fa-arrow-up btn btn-link" th:id="'upvote-comment-' + ${comment.id}"> </i>
+                                        <p class="mb-0 ml-3"><span th:text = "${comment.getRatingTotal()}"></span></p>
+                                        <i class="downvote-comment-button fas fa-arrow-down btn btn-link" th:id="'downvote-comment-' + ${comment.id}"></i>
                                     </div>
-                                    <button class="upvote-comment-button" th:id="'upvote-comment-' + ${comment.id}">
-                                        Upvote JS
-                                    </button>
-                                    <button class="downvote-comment-button" th:id="'downvote-comment-' + ${comment.id}">
-                                        Downvote JS
-                                    </button>
-                                </div>
-                                <div th:each="comment : ${post.commentList}">
-                                    <div class="row">
-                                        <div class="col-1">
-                                            <i class="upvote-comment-button fas fa-arrow-up btn btn-link" th:id="'upvote-comment-' + ${comment.id}"> </i>
-                                            <p class="mb-0 ml-3"><span th:text = "${comment.getRatingTotal()}"></span></p>
-                                            <i class="downvote-comment-button fas fa-arrow-down btn btn-link" th:id="'downvote-comment-' + ${comment.id}"></i>
+                                    <div class="col-11 align-self-center p- commentrow">
+                                        <p class="mb-0" th:text = "${comment.body}" th:id="'comment-body-' + ${comment.id}"></p>
+                                        <div th:if="${user.id == comment.user.id}">
+                                            <div class="edit-comment-div" th:id="'edit-comment-div-' + ${comment.id}"></div>
+                                            <button class="edit-comment-button btn btn-link float-right p-0 mr-3 align-self-end" th:id="'edit-comment-button-' + ${comment.id}">Edit Comment</button>
                                         </div>
-                                        <div class="col-11 align-self-center p- commentrow">
-                                            <p class="mb-0" th:text = "${comment.body}" th:id="'comment-body-' + ${comment.id}"></p>
-                                            <div th:if="${user.id == comment.user.id}">
-                                                <div class="edit-comment-div" th:id="'edit-comment-div-' + ${comment.id}"></div>
-                                                <button class="edit-comment-button btn btn-link float-right p-0 mr-3 align-self-end" th:id="'edit-comment-button-' + ${comment.id}">Edit Comment</button>
-                                            </div>
-                                        </div>
+                                    </div>
                                 </div>
-                                    <hr class="m-0">
-                                </div>
-                                    <div class="create-comment-div" th:id="'create-comment-div-' + ${post.id}"></div>
-                                    <button class="add-comment-button btn btn-link" th:id="'add-comment-button-' + ${post.id}">Comment</button>
-                                <div th:if="${user.id == post.user.id}">
-                                    <a th:href="@{|/interview-posts/edit/${post.id}|}"><button>Edit my post</button></a>
-                                    <button class="delete-button" th:id="${post.postType.type} + '-' + ${post.id}">Delete my Post</button>
+                                <hr class="m-0">
                             </div>
+                            <div class="create-comment-div" th:id="'create-comment-div-' + ${post.id}"></div>
+                            <button class="add-comment-button btn btn-link" th:id="'add-comment-button-' + ${post.id}">Comment</button>
                             <div th:if="${user.id == post.user.id}">
-                                <a th:href="@{|/mentorship-posts/edit/${post.id}|}">
-                                    <button>Edit my post</button>
-                                </a>
-                                <button class="delete-button" th:id="${post.postType.type} + '-' + ${post.id}">Delete my
-                                    Post
-                                </button>
+                                <a th:href="@{|/interview-posts/edit/${post.id}|}"><button>Edit my post</button></a>
+                                <button class="delete-button" th:id="${post.postType.type} + '-' + ${post.id}">Delete my Post</button>
                             </div>
-                            <hr>
                         </div>
                     </div>
                 </div>
@@ -272,8 +258,9 @@
                         <div class="col-11">
                             <div th:id="'post-' + ${post.id}">
                                 <p class="m-r mb-0 userprint">Posted on: <span class="userinfo" th:text = "${post.dateTime}"></span> by <span class="userinfo" th:text="${post.user.username}"></span></p>
-                                <h1 th:text = "${post.title}"></h1>
-                                <p th:text = "${post.body}"></p>
+                                <h1 th:text = "${post.body}"></h1>
+                                <p th:text = "${post.title}"></p>
+                                <p class = "mb-0" th:text = "${post.answer}"></p>
                                 <hr class="m-0">
                                 <!--                                                        <p class="m-r mb-0">Asked by: <span th:text="${post.user.username}"></span> On: <span th:text = "${post.dateTime}"></span>  </p>-->
                                 <div  th:if="${post.imageURLList.size() > 0 && post.imageURLList[0].url.length() > 8}" >
@@ -312,67 +299,71 @@
         </div>
     </div>
 </div>
+
+
+
+
 <!--    End Mentorship-->
 <!--    Job-->
-    <div class="row m-5">
-<!--    side card and link to post to jobs-->
-        <div class="col-3">
-            <div class="card text-center">
-                <div class="card-body">
-                    <h3 class ="fancy-header">Most Recent Job Postings</h3>
-                    <p class="card-text">This page is for future developers to get ahead on the job front. Here as Alumni we can see if there are any openings at our place of employment and help future or current grads know of any positions open in the area</p>
-                    <button type="button" class="btn btn-link" data-toggle="modal" data-target="#jobsModal">
-                        Job Postings Create
-                    </button>
-                </div>
+<div class="row m-5">
+    <!--    side card and link to post to jobs-->
+    <div class="col-3">
+        <div class="card text-center">
+            <div class="card-body">
+                <h3 class ="fancy-header">Most Recent Job Postings</h3>
+                <p class="card-text">This page is for future developers to get ahead on the job front. Here as Alumni we can see if there are any openings at our place of employment and help future or current grads know of any positions open in the area</p>
+                <button type="button" class="btn btn-link" data-toggle="modal" data-target="#jobsModal">
+                    Job Postings Create
+                </button>
             </div>
         </div>
-<!-- post info everthing is on this post, comments, votes-->
-        <div class="col-9">
-            <div class="card mb-2">
-                <div class="card-body">
-                    <div th:each="post : ${jobPostingsList}">
-                        <div class="row">
-                            <div class="col-1">
-                                <i class="upvote-button fas fa-arrow-up btn btn-link"  th:id="'upvote-' + ${post.id}"></i>
-                                <p class="mb-0 ml-3">  <span th:text = "${post.getRatingTotal()}"></span></p>
-                                <i class="downvote-button fas fa-arrow-down btn btn-link" th:id="'downvote-' + ${post.id}"></i>
+    </div>
+    <!-- post info everthing is on this post, comments, votes-->
+    <div class="col-9">
+        <div class="card mb-2">
+            <div class="card-body">
+                <div th:each="post : ${jobPostingsList}">
+                    <div class="row">
+                        <div class="col-1">
+                            <i class="upvote-button fas fa-arrow-up btn btn-link"  th:id="'upvote-' + ${post.id}"></i>
+                            <p class="mb-0 ml-3">  <span th:text = "${post.getRatingTotal()}"></span></p>
+                            <i class="downvote-button fas fa-arrow-down btn btn-link" th:id="'downvote-' + ${post.id}"></i>
+                        </div>
+                        <div class="col-11">
+                            <div th:id="'post-' + ${post.id}">
+                                <p class="m-r mb-0 userprint">Posted on: <span class="userinfo" th:text = "${post.dateTime}"></span> by <span class="userinfo" th:text="${post.user.username}"></span></p>
+                                <h1 th:text = "${post.body}"></h1>
+                                <p th:text = "${post.title}"></p>
+                                <p class = "mb-0" th:text = "${post.answer}"></p>
+                                <hr class="m-0">
+                                <!--                                                        <p class="m-r mb-0">Asked by: <span th:text="${post.user.username}"></span> On: <span th:text = "${post.dateTime}"></span>  </p>-->
+                                <div  th:if="${post.imageURLList.size() > 0 && post.imageURLList[0].url.length() > 8}" >
+                                    <img th:src="${post.imageURLList[0].url}" alt="post-image">
+                                </div>
                             </div>
-                            <div class="col-11">
-                                <div th:id="'post-' + ${post.id}">
-                                    <p class="m-r mb-0 userprint">Posted on: <span class="userinfo" th:text = "${post.dateTime}"></span> by <span class="userinfo" th:text="${post.user.username}"></span></p>
-                                    <h1 th:text = "${post.title}"></h1>
-                                    <p th:text = "${post.body}"></p>
-                                    <hr class="m-0">
-                                    <!--                                                        <p class="m-r mb-0">Asked by: <span th:text="${post.user.username}"></span> On: <span th:text = "${post.dateTime}"></span>  </p>-->
-                                    <div  th:if="${post.imageURLList.size() > 0 && post.imageURLList[0].url.length() > 8}" >
-                                        <img th:src="${post.imageURLList[0].url}" alt="post-image">
-                                    </div>
-                                </div>
 
-                                <div th:each="comment : ${post.commentList}">
-                                    <div class="row">
-                                        <div class="col-1">
-                                            <i class="upvote-comment-button fas fa-arrow-up btn btn-link" th:id="'upvote-comment-' + ${comment.id}"> </i>
-                                            <p class="mb-0 ml-3"><span th:text = "${comment.getRatingTotal()}"></span></p>
-                                            <i class="downvote-comment-button fas fa-arrow-down btn btn-link" th:id="'downvote-comment-' + ${comment.id}"></i>
-                                        </div>
-                                        <div class="col-11 align-self-center p- commentrow">
-                                            <p class="mb-0 mt-1" th:text = "${comment.body}" th:id="'comment-body-' + ${comment.id}"></p>
-                                            <div th:if="${user.id == comment.user.id}">
-                                                <div class="edit-comment-div" th:id="'edit-comment-div-' + ${comment.id}"></div>
-                                                <button class="edit-comment-button btn btn-link float-right p-0 mr-3 align-self-end" th:id="'edit-comment-button-' + ${comment.id}">Edit Comment</button>
-                                            </div>
+                            <div th:each="comment : ${post.commentList}">
+                                <div class="row">
+                                    <div class="col-1">
+                                        <i class="upvote-comment-button fas fa-arrow-up btn btn-link" th:id="'upvote-comment-' + ${comment.id}"> </i>
+                                        <p class="mb-0 ml-3"><span th:text = "${comment.getRatingTotal()}"></span></p>
+                                        <i class="downvote-comment-button fas fa-arrow-down btn btn-link" th:id="'downvote-comment-' + ${comment.id}"></i>
+                                    </div>
+                                    <div class="col-11 align-self-center p- commentrow">
+                                        <p class="mb-0 mt-1" th:text = "${comment.body}" th:id="'comment-body-' + ${comment.id}"></p>
+                                        <div th:if="${user.id == comment.user.id}">
+                                            <div class="edit-comment-div" th:id="'edit-comment-div-' + ${comment.id}"></div>
+                                            <button class="edit-comment-button btn btn-link float-right p-0 mr-3 align-self-end" th:id="'edit-comment-button-' + ${comment.id}">Edit Comment</button>
                                         </div>
                                     </div>
-                                    <hr class="m-0">
                                 </div>
-                                <div class="create-comment-div" th:id="'create-comment-div-' + ${post.id}"></div>
-                                <button class="add-comment-button btn btn-link" th:id="'add-comment-button-' + ${post.id}">Comment</button>
-                                <div th:if="${user.id == post.user.id}">
-                                    <a th:href="@{|/jobs-postings/edit/${post.id}|}"><button>Edit my post</button></a>
-                                    <button class="delete-button" th:id="${post.postType.type} + '-' + ${post.id}">Delete my Post</button>
-                                </div>
+                                <hr class="m-0">
+                            </div>
+                            <div class="create-comment-div" th:id="'create-comment-div-' + ${post.id}"></div>
+                            <button class="add-comment-button btn btn-link" th:id="'add-comment-button-' + ${post.id}">Comment</button>
+                            <div th:if="${user.id == post.user.id}">
+                                <a th:href="@{|/jobs-postings/edit/${post.id}|}"><button>Edit my post</button></a>
+                                <button class="delete-button" th:id="${post.postType.type} + '-' + ${post.id}">Delete my Post</button>
                             </div>
                         </div>
                     </div>
