--- a/src/main/resources/templates/aboutUs.html
+++ b/src/main/resources/templates/aboutUs.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head th:replace="fragments/header.html :: header(title = 'About Us')">
 </head>
 <body>
-$END$
+<h1>testing</h1>
+<div th:replace="fragments/body-scripts.html :: body-scripts"></div>
 </body>
 </html>
