--- a/src/main/resources/templates/users/dashboard.html
+++ b/src/main/resources/templates/users/dashboard.html
@@ -10,15 +10,23 @@
 
 <!--The profile card at the top of the page -->
 <!--<div class="container">-->
-<div class="container profile-container">
-
-    <!--    PROFILE CARD    -->
-    <div class="card p-5 mt-5 blue-font" id="profile-card">
-        <h2 class="card-title text-center p-3 profile-header">CodeOn</h2>
-        <p class="text-center"> Here at CodeOn we as a community strive build a community of developers that can help change the world  </p>
-        <p class="align-self-end profile-btns">
-            <!--                maybe add some buttons to the front-->
-        </p>
+<div class="row m-5">
+    <div class="col-3">
+        <div class="card text-center">
+                <h4>Welcome, <span th:text="${user.username}">user</span>!</h4>
+                <p th:text = "${user.firstName}"></p>
+                <img th:src="${user.profileImageURL}" alt="profile" class="img-fluid align-self-center mr-3" width="25%" height="20%">
+                <p class="card-text">use</p>
+        </div>
+    </div>
+    <div class="col-9">
+        <div class="card mb-2">
+            <div class="card-body">
+                <h2 class="card-title text-center p-3 profile-header">CodeOn</h2>
+                <p class="text-center"> Here at CodeOn we as a community strive build a community of developers that can help
+                    change the world </p>
+            </div>
+        </div>
     </div>
 </div>
 
